# hairgap-binaries

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  Vagrantfile  compile.sh  manylinux1_x86_64-hairgapr  manylinux1_x86_64-hairgaps  packaging.py  pyproject.toml  setup.cfg  setup.py  vagrant.yml
hairgap/: README.md
hairgap/defaults/: main.yml
hairgap/meta/: main.yml
hairgap/tasks/: main.yml
hairgap_binaries/: __init__.py  linux-aarch64-hairgapr  linux-aarch64-hairgaps  linux-x86_64-hairgapr  linux-x86_64-hairgaps  manylinux1_x86_64-hairgapr  manylinux1_x86_64-hairgaps  test_hairgap_binaries.py
