[metadata]
name = hairgap_binaries
url = https://github.com/d9pouces/hairgap-binaries
author = Matthieu Gallet
author_email = github@19pouces.net
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License V3 (GPLV3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Provide compiled binaries of https://github.com/cea-sec/hairgap
license = GPL v3
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Matthieu Gallet
maintainer_email = github@19pouces.net
version = attr: hairgap_binaries.__version__

[options]
include_package_data = True
packages = find:
zip_safe = False

[options.entry_points]
console_scripts =
